cabal-version:      2.4
name:               aoc
version:            0.1.0.0
synopsis:           A library to help write and run aoc solutions in Haskell
description:        A library that exposes utilities to run aoc solutions for any year.
                    There's also a command line tool to auto generate directories for any year
                    and automatically add the corresponding executable stanza to the aoc.cabal file.
-- bug-reports: 
-- license:
author:             Giacomo Cavalieri
maintainer:         giacomo.cavalieri@icloud.com

common default-build
    default-language:   Haskell2010
    build-depends:      base ^>= 4.14.3.0
                      , relude ^>= 1.0.0.0
    mixins:             base hiding (Prelude)
                      , relude (Relude as Prelude)
                      , relude
    default-extensions: InstanceSigs
                      , LambdaCase
                      , MultiWayIf
                      , TupleSections
                      , NumericUnderscores
                      , OverloadedStrings
                      , RecordWildCards
                      , NamedFieldPuns
                      , NamedWildCards
                      , DuplicateRecordFields
                      , NoStarIsType
                      , DeriveFoldable
                      , DeriveFunctor
                      , DeriveTraversable
                      , FlexibleContexts
                      , PatternSynonyms
                      , GADTs
    ghc-options: -Wall 
                 -Wcompat
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -O3

library
    import:          default-build
    hs-source-dirs:  app/core 
    exposed-modules: AOC.Types AOC.App
    other-modules:   AOC.Day AOC.Day.Eval AOC.Day.Download AOC.Utils
                     AOC.App.Configuration AOC.PrettyPrinting
    build-depends:   filepath
                   , unliftio
                   , req
                   , http-client
                   , optparse-applicative
                   , time
                   , boxes

executable aoc-cli
    import:         default-build
    hs-source-dirs: app/cli
    main-is:        Main.hs
    build-depends:  aoc
                  , string-interpolate
                  , filepath
                  , unliftio

executable 2022
    import:         default-build
    hs-source-dirs: app/2022
    main-is:        Main.hs
    other-modules:  Day1  Day2  Day3  Day4  Day5
                    Day6  Day7  Day8  Day9  Day10
                    Day11 Day12 Day13 Day14 Day15
                    Day16 Day17 Day18 Day19 Day20
                    Day21 Day22 Day23 Day24 Day25
    build-depends:  aoc

